# -AAPL-Linear-Regression-

./: .gitignore  AAPL_Close_Price.csv  AAPL_Stock_Info.csv  NB.ipynb  clean_data.py  linear_regression.py  pyproject.toml
Data/: AAPL_Close_Price.csv  AAPL_Stock_Info.csv  Avg_Monthly_Returns.csv  Log_Simple_Returns.csv  Simple_Returns.csv  Year_Month_AAPL.csv  Year_Month_AAPL_Close.csv  monthlyAverage.csv
Data Cleaning/: Data NB.ipynb  DataNB.ipynb  NB.ipynb  Plotting.py  SegmentData.py  clean_data.py
Linear Regression/: lrNB.ipynb  lrTotalClose.py  lrTotalReturn.py
