[project]
name = "clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
    "yfinance>=1.2.0",
]
